--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
 <style>
+  /* ADD THIS LINE to reduce the base font size */
+  html { 
+    font-size: 87.5%; /* Reduces 16px default to 14px (0.875rem) */
+  } 
+  
   body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
   .kpi-card { transition: all 0.3s ease; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); }
   .kpi-card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); }
