--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <style>
   /* ADD THIS LINE to reduce the base font size */
   html { 
-    font-size: 70.5%; /* Reduces 16px default to 14px (0.875rem) */
+    font-size: 75.5%; /* Reduces 16px default to 14px (0.875rem) */
   } 
   
   body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
@@ -227,15 +227,15 @@
 
         <header class="bg-white shadow-md flex-shrink-0">
             <div class="px-4 sm:px-6 lg:px-8">
-                <div class="flex items-center justify-between h-16">
+                <div class="flex items-center justify-between h-20">
                     <div class="flex items-center">
                         <button id="menu-button" class="lg:hidden p-2 mr-3 text-gray-500 hover:text-gray-900">
                             <i data-lucide="menu" class="w-6 h-6"></i>
                         </button>
                         
-                        <img src="https://www.dropbox.com/scl/fi/vmprhd0i0781yytkkukfg/Untitled-Kasam-Sales-Insights.png?rlkey=hazshd3m3mkftjssizqfzpmw3&st=f00pivkz&raw=1" 
+                        <img src="https://www.dropbox.com/scl/fi/likr2k1anulu772755g7z/Untitled-Kasam-Sales-Insights-2.png?rlkey=prducnpxfwdit2jwpy292lygv&amp;st=m5lthzcx&amp;raw=1" 
                         alt="Kasam Sales Insights Logo" 
-                        class="h-20 w-auto mr-4 object-contain mt-4"> 
+                        class="h-20 w-15 mr-4 object-contain"> 
                         <h1 class="text-xl font-extrabold text-gray-800 mt-4">Kasam Fashions Private Limited</h1>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                         </div>
                         
                         <div class="mt-auto pt-4 border-t border-gray-200">
-                            <button id="logout-button" class="w-full flex items-center justify-start gap-3 px-4 py-2 text-sm font-medium text-white bg-red-600 rounded-md hover:bg-red-700">
+                            <button id="logout-button" class="ml-12 w-70 flex items-center justify-start gap-3 px-4 py-2 text-sm font-medium text-white bg-red-600 rounded-md hover:bg-red-700">
                                 <i data-lucide="log-out" class="w-4 h-4"></i>
                                 <span>Logout</span>
                             </button>
@@ -280,7 +280,7 @@
                     </div><img src="https://www.dropbox.com/scl/fi/likr2k1anulu772755g7z/Untitled-Kasam-Sales-Insights-2.png?rlkey=prducnpxfwdit2jwpy292lygv&st=m5lthzcx&raw=1" 
                     alt="Kasam Sales Insights Logo" 
                     alt="Kasam Sales Insights Logo"
-                        class="h-60 w-auto mt-32 mb-4 object-contain ml-auto mr-auto opacity-50">
+                        class="h-60 w-auto mt-32 mb-4 object-contain ml-auto mr-auto opacity-80">
                     <h2 class="text-4xl font-bold text-gray-800 mb-4 ml-24 text-center">Welcome to Kasam Sales Insights</h2>
                     <p class="text-xl text-gray-600 mb-4 ml-24 text-center">Use the navigation panel to view reports, track sales trends, and analyze payment differences of the stores.</p>
                 </div>
@@ -1196,19 +1196,19 @@ function renderTable(clear = false) {
 
   const headerRowHtml = `
     <tr>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Store</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Date</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">POS Cash</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Deposited Cash</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Expenses / Discounts</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Cash Diff</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">POS Card</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Card Settled</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Card Diff</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">POS UPI</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">UPI Settled</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">UPI Diff</th>
-      <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Overall Difference</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Store</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Date</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">POS Cash</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Deposited Cash</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Expenses / Discounts</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Cash Diff</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">POS Card</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Card Settled</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Card Diff</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">POS UPI</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">UPI Settled</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">UPI Diff</th>
+      <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Overall Difference</th>
       <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Remarks</th>
     </tr>
   `;
