--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
       html { 
-        font-size: 80.5%;
+        font-size: 75.5%;
       } 
       body { 
         font-family: 'Inter', sans-serif; 
@@ -132,7 +132,7 @@
                 
                 <main class="flex-1 p-4 sm:p-6 lg:p-8 overflow-y-auto flex flex-col">
                     <div id="page-home" class="page-content flex-1 bg-white rounded-lg shadow flex flex-col items-center justify-start p-6 sm:p-12">
-                        <img src="https://www.dropbox.com/scl/fi/qovbx5eogzklebun582ln/Sales.png?rlkey=x6pp38je3j7eclrrspl6xh3l7&st=f1ayft52&raw=1" alt="Kasam Sales Insights Logo" class="h-40 sm:h-50 w-auto mb-4 object-contain opacity-100" />
+                        <img src="https://www.dropbox.com/scl/fi/qovbx5eogzklebun582ln/Sales.png?rlkey=x6pp38je3j7eclrrspl6xh3l7&st=f1ayft52&raw=1" alt="Kasam Sales Insights Logo" class="h-40 sm:h-50 w-auto mt-20 mb-4 object-contain opacity-100"/>
                         <h2 class="text-2xl sm:text-2xl font-bold text-gray-800 mb-4 text-center">Welcome to Kasam Sales Insights</h2>
                         <p class="text-base sm:text-lg text-gray-600 max-w-2xl text-center">Use the navigation panel to view reports, track sales trends, and analyze payment differences of the stores.</p>
                     </div>
