--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
 
         <div id="app-content" class="hidden min-h-screen flex flex-col">
-            <header class="bg-white shadow-md flex-shrink-0 z-30 hidden"> 
+            <header class="bg-white shadow-md flex-shrink-0 z-30"> 
                 <div class="px-4 sm:px-6 lg:px-8">
                     <div class="flex items-center justify-between h-20">
                         <div class="flex items-center">
