--- a/index.html
+++ b/index.html
@@ -105,11 +105,10 @@
                 <div class="px-4 sm:px-6 lg:px-8">
                     <div class="flex items-center justify-between h-20">
                         <div class="flex items-center">
-                            <button id="menu-button" class="lg:hidden p-2 -ml-2 mr-3 text-gray-500 hover:text-gray-900">
+                            <button id="menu-button" class="lg:hidden p-2 -ml-4 mr-3 text-gray-500 hover:text-gray-900">
                                 <i data-lucide="menu" class="w-6 h-6"></i>
                             </button>
-                            <img src="https://www.dropbox.com/scl/fi/qovbx5eogzklebun582ln/Sales.png?rlkey=x6pp38je3j7eclrrspl6xh3l7&st=f1ayft52&raw=1" alt="Kasam Sales Insights Logo" class="h-16 w-auto object-contain">
-                            <h1 class="hidden sm:block text-xl font-extrabold text-gray-800 ml-4">Kasam Fashions Private Limited</h1>
+                            <h1 class="hidden sm:block text-xl font-extrabold text-gray-800">Kasam Fashions Pvt.Ltd</h1>
                         </div>
                     </div>
                 </div>
